[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/characters/Monster/Ranged/machkeinauge.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/Enemy/Search.gd" type="Script" id=2]
[ext_resource path="res://src/Scripts/Enemy/EnemyCharger.gd" type="Script" id=3]
[ext_resource path="res://src/Scripts/Enemy/Charge.gd" type="Script" id=4]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://src/Scripts/Enemy/BehaviorController.gd" type="Script" id=6]
[ext_resource path="res://src/Scripts/Enemy/StraightLineBehavior.gd" type="Script" id=7]
[ext_resource path="res://src/Scripts/Enemy/Cooldown.gd" type="Script" id=8]
[ext_resource path="res://src/Player/HurtBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Player/WanderController.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Enemy/TargetDetector.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Enemy/Components/Hitbox.tscn" type="PackedScene" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 62.3601

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.00392157, 0.0431373, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.00392157, 0.0431373, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

[node name="EnemyCharger" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 16
collision_mask = 19
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="TargetDetector" parent="." instance=ExtResource( 11 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Search")

[node name="Search" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Charge" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
behavior = NodePath("../../BehaviorController2D/StraightLineBehavior2D")

[node name="Timer" type="Timer" parent="StateMachine/Charge"]

[node name="Cooldown" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="BehaviorController2D" type="Node" parent="."]
script = ExtResource( 6 )
actor_path = NodePath("..")

[node name="StraightLineBehavior2D" type="Node" parent="BehaviorController2D"]
script = ExtResource( 7 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 13 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 9 )]
collision_mask = 1089

[node name="CollisionShape2D" parent="HurtBox" index="0"]
modulate = Color( 0.941176, 0.0196078, 0.0196078, 1 )

[node name="FreezeTimer" type="Timer" parent="."]

[node name="WanderController" parent="." instance=ExtResource( 10 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/freezing = SubResource( 3 )
anims/frozen = SubResource( 4 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="HurtBox" to="Hitbox" method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]

[editable path="Hitbox"]

[editable path="HurtBox"]
